css/main.css
:root {
    --clr-primary: #d69e3d;
    --clr-primary-dark: #966f2c;
    --clr-light: #f3f0e9;
    --clr-white: #ffffff;
    --clr-dark: #000000;

    --ff-heading: 'Lato', sans-serif;
    --ff-body: 'Karla', sans-serif;

    --max-width: 1200px;
}

/*
<<<<<<<< SOME GENERAL SETTINGS >>>>>>>>>
*/

body {
    background-color: var(--clr-light);
    font-family: var(--ff-body);
    color: var(--clr-dark);
    font-size: 1rem;
    line-height: 1.6;
}

h1, h2, h3 {
    font-family: var(--ff-heading);
    font-weight: 700;
    line-height: 1.2;
}

h1 { font-size: 2rem; 
    text-transform: uppercase;
    padding-top: 2em;}
h2 { font-size: 1.75rem; }
h3 { font-size: 1.375rem; }

p {
    margin-bottom: 1rem;
    font-weight: 200;
}

img {
    max-width: 100%;
    display: block;
}

.container {
    width: 90%;
    max-width: var(--max-width);
    margin: 0 auto;
}

.skip-link {
    position: absolute;
    top: -40px;
    left: 0;
    background: var(--clr-dark);
    color: var(--clr-white);
    padding: 8px;
    z-index: 100;
}

.skip-link:focus {
    top: 0;
}

/*
<<<<<<<< ALL ANIMATIONS >>>>>>>>>
*/

@keyframes fadeIn {
    from { opacity: 0; transform: translateY(20px); }
    to { opacity: 1; transform: translateY(0); }
}

.fade-in {
    animation: fadeIn 1s ease-in-out forwards;
}

.btn, .nav-links a {
    transition: all 0.3s ease-in-out;
}

/*
<<<<<<<< ALL BUTTONS >>>>>>>>>
*/

.btn {
    display: inline-block;
    padding: 0.75em 2.2em;
    text-decoration: none;
    font-family: var(--ff-body);
    font-weight: 700;
    cursor: pointer;
    text-align: center;
}

.btn-primary {
    background-color: var(--clr-white);
    color: var(--clr-dark);
    text-transform: uppercase;
    font-size: 1.5rem;
    padding: 0.25em 1.2em;
}

.btn-primary:hover, .btn-primary:focus {
    background-color: var(--clr-primary-dark);
    color: var(--clr-white);
}

.btn-secondary {
    background-color: var(--clr-white);
    color: var(--clr-dark);
    padding: 0.75em 4em;
}

.btn-secondary:hover, .btn-secondary:focus {
    background-color: var(--clr-primary);
}

.btn-outline {
    background-color: transparent;
    color: var(--clr-white);
    border: 2px solid var(--clr-white);
    padding: 0.75em 4em;
}

.btn-outline:hover, .btn-outline:focus {
    background-color: var(--clr-white);
    color: var(--clr-dark);
}
.btn-dark {
    background-color: var(--clr-dark);
    color: var(--clr-white);
    padding: 0.75em 3em;
    text-transform: uppercase;
}

.btn-dark:hover,
.btn-dark:focus {
    background-color: var(--clr-primary-dark);
    color: var(--clr-white);
}
/*
<<<<<<<< HEADER SECTION >>>>>>>>>
*/
.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    border: 0;
}
.header {
    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../images/hero-background.jpg');
    background-size: cover;
    background-position: center;
    color: var(--clr-white);
    padding-bottom: 6em;
}

.header-flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1em 0;
    border-bottom: 1px solid var(--clr-white);
}

.logo img {
    width: 250px;
}

.main-nav {
    position: relative;
}

/* PART OF THE HAMBURGER MENU SETUP */
.nav-toggle {
    display: block; 
    background: transparent;
    border: 0;
    cursor: pointer;
    padding: 0.5em; 
}

/* HOW TO CREATE A HAMBURGER MENU CENTER LINE */
.hamburger {
    display: block;
    position: relative;
    width: 25px;
    height: 3px;
    background: var(--clr-white);
}

/* NICE TRICK I LEARNED FOR TOP & BOTTOM LINES FOR HAMBURGER MENU */
.hamburger::before,
.hamburger::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 3px;
    background: var(--clr-white);
    left: 0;
}

.hamburger::before {
    top: -8px;
}

.hamburger::after {
    bottom: -8px;
}


.nav-links {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
    gap: 1.5em;
    display: none;
}

.nav-links a {
    color: var(--clr-white);
    text-decoration: none;
    font-family: var(--ff-heading);
    font-weight: 700;
}

.nav-links a:hover,
.nav-links a:focus {
    color: var(--clr-primary);
}

.hero-content {
    text-align: center;
    padding: 3em 0;
}

.hero-content h1 {
    margin: 0.5em auto;
    width: 80%;

}

.hero-content p {
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 2em;
}

/*
<<<<<<<< EXPERIENCE SECTION >>>>>>>>>
*/

section {
    padding: 4em 0 1em 0;
}

section h2 {
    text-align: center;
    margin-bottom: 1.5em;
}

.experience h2,
.experience .subheading {
    text-align: left;
}

.experience .subheading {
    color: var(--clr-primary);
    text-transform: uppercase;
    margin-bottom: 0.5em;
    font-size: 1.2rem;
}

.experience h2 {
    margin-bottom: 1em;
    text-transform: uppercase;
    font-weight: 700;
}

.gallery-grid {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: repeat(4, auto);
    gap: 1em;
}

.gallery-grid img {
    width: 100%;
    object-fit: cover;
}

.gallery-grid img:nth-child(1) {
    grid-column: 1 / 3;
    grid-row: 1 / 3;
}

/*
<<<<<<<< WHY VISIT SECTION >>>>>>>>>
*/

.why-visit h2,
.why-visit .subheading {
    text-align: center;
}

.why-visit .subheading {
    color: var(--clr-primary);
    text-transform: uppercase;
    margin-bottom: 0.5em;
    font-size: 1.2rem;
}

.why-visit h2 {
    margin-bottom: 1.5em; 
    text-transform: uppercase;
}

.features-grid {
    display: grid;
    gap: 4em;
    text-align: center;
    margin-bottom: 4em;
}

.feature-item h3 {
    text-transform: uppercase;
    padding-bottom: 1em;
}

.feature-item img {
    margin: 0 auto 1em;
    height: 150px;
}

/*
<<<<<<<< CTA MENU & LOCATIONS SECTION >>>>>>>>>
*/
.cta-wrapper {
    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('../images/coffee-shop.jpeg');
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    padding: 3em 0;
}

.cta-menu,
.cta-locations {
    color: var(--clr-white);
    text-align: center;
    padding: 2em 0; 
    text-transform: uppercase;
}

.cta-menu .subheading,
.cta-locations .subheading {
    color: var(--clr-primary);
    text-transform: uppercase;
    margin-bottom: 0.5em;
    font-size: 1.2rem;
}

.cta-menu h2,
.cta-locations h2 {
    text-transform: uppercase;
    font-weight: 500;
    font-size: 2rem;
    width: 80%;
    margin: 0.6em auto;
}

/*
<<<<<<<< ABOUT US STYLES >>>>>>>>>
*/

.about-flex {
    display: grid;
    gap: 2em;
}
.about-image {
    aspect-ratio: 1 / 1;
    overflow: hidden;
}
.about-content h3 {
    color: var(--clr-primary);
    text-transform: uppercase;
    font-size: 1.2rem;
    margin-bottom: 0.5em;
}

.about-us h2 {
    text-transform: uppercase;
    margin-bottom: 1em;
    text-align: left;
    }

    .about-content .btn {
        margin-bottom: 3rem;
    }

/*
<<<<<<<< TESTIMONIALS STYLES >>>>>>>>>
*/

.testimonials {
    background-color: var(--clr-dark);
    color: var(--clr-white);
}

.testimonials .subheading,
.testimonials h2 {
    text-align: left; 
}

.testimonials .subheading {
    color: var(--clr-primary);
    text-transform: uppercase;
    font-size: 1.2rem;
    margin-bottom: 0.5em;
}

.testimonials h2 {
    margin-bottom: 1.5em;
    text-transform: uppercase;
}

.testimonials-grid {
    display: grid;
    gap: 2em;
    margin-bottom: 2em;
}

.testimonial-card {
    position: relative; 
}

.testimonial-card img {
    display: block;
    width: 100%;
    opacity: 0.5;
}

.testimonial-content {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 1.5em;
}

.testimonial-content blockquote {
    margin-bottom: 1em;
    font-size: 1.2rem;
    font-weight: 200;
}

.testimonial-content cite {
    font-weight: 700;
    font-size: 1.2rem;
    font-style: normal;
    text-transform: uppercase;
    color: var(--clr-primary);
}

/*
<<<<<<<<FOOTER STYLES >>>>>>>>>
*/

.footer {
    background-color: var(--clr-dark);
    color: var(--clr-white);
    text-align: center;
    padding: 2em 0 8em 0;
}

.footer .container {
    border-top: 1px solid var(--clr-white);
    padding-top: 1em;
}

/*
<<<<<<<<TABLET STYLES >>>>>>>>>
*/

@media (min-width: 768px) {
    h1 { font-size: 3rem; }
    h2 { font-size: 2.375rem; }
    h3 { font-size: 1.75rem; }

    .experience .subheading 
    { margin-top: 1.5em;}
    
    .experience h2 {
        width: 60%;
    }
    .gallery-grid {
        grid-template-columns: repeat(4, 1fr);
        grid-template-rows: repeat(2, 1fr);
        gap: 1.5em;
    }
    .gallery-grid img:nth-child(1) 
    { grid-column: 1 / 3; grid-row: 1 / 3; }
    
    .features-grid {
        grid-template-columns: repeat(2, 1fr);
    }
    .features-grid .feature-item:last-child {
        grid-column: 1 / 3; 
    }
    .features-grid .feature-item:last-child p {
        width: 50%;
        margin: 0 auto; 
    }
    .cta-menu h2,
    .cta-locations h2 {
    font-weight: 600;
    }

    .testimonials h2 {
        width: 70%;
    }
    .testimonials-grid {
        grid-template-columns: repeat(4, 1fr);
    }
    .testimonials-grid .testimonial-card:nth-child(1) {
        grid-column: 1 / 3;
    }

    .testimonials-grid .testimonial-card:nth-child(2) {
        grid-column: 3 / 5;
    }

    .testimonials-grid .testimonial-card:nth-child(3) {
        grid-column: 2 / 4;
    }
}

/*
<<<<<<<<DESKTOP STYLES >>>>>>>>>
*/

@media (min-width: 1200px) {
    h1 { font-size: 3.875rem; }
    h2 { font-size: 3rem; }
    h3 { font-size: 2rem; }

    .nav-toggle {
        display: none; 
    }

    .main-nav .nav-links {
        display: flex; 
        flex-direction: row;
        text-transform: uppercase;
    }
    .why-visit {
        margin-top: 2em;
    }

    .features-grid {
        grid-template-columns: repeat(3, 1fr);
    }

    .features-grid .feature-item:last-child {
        grid-column: auto;
    }

    .features-grid .feature-item:last-child p {
        width: 100%; 
        margin: 0;
    }

    .cta-wrapper .container{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: none;
    }

    .about-flex {
        grid-template-columns: 1fr 1fr;
        gap: none;
        margin: 3em 0 6em 0;
    }
    .about-content {
        align-self: center;
    }
    .about-content .btn {
        margin-bottom: 0;
    }
    .testimonials-grid {
        grid-template-columns: repeat(3, 1fr);
        
    }
    .testimonials h2 {
        width: 50%;
    }
    .testimonials-grid .testimonial-card:nth-child(1),
    .testimonials-grid .testimonial-card:nth-child(2),
    .testimonials-grid .testimonial-card:nth-child(3) {
        grid-column: auto;
    }
    .testimonial-card {
        aspect-ratio: 2 / 2.4;
        overflow: hidden;
    }
}

